--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -13,8 +13,8 @@
         #role="ngModel"
       >
         <option value="" disabled selected>Select Role</option>
-        <option value="user">User</option>
-        <option value="admin">Admin</option>
+        <option value="User">User</option>
+        <option value="Admin">Admin</option>
       </select>
       <div class="form-group-error" *ngIf="!role.valid && role.touched">
         <p *ngIf="role.errors?.required">Role is required</p>
